--- a/projects.Rmd
+++ b/projects.Rmd
@@ -1,16 +1,17 @@
 ---
 title: "Our Projects and Publications"
 subtitle: "*Columbia University Irving Medical Center Cardiothoracic Surgery Research Program*"
-output:   
-    flexdashboard::flex_dashboard:
-      vertical_layout: scroll
+output: 
+  html_document:
+    toc: true
+    toc_float: true
 editor_options: 
   chunk_output_type: console
 ---
 
 \
 
-# Mitral Valve\
+# <u>Mitral Valve </u>\
 
 ## Myxomatous Mitral Valve Disease
 
@@ -23,28 +24,28 @@ Degenerative mitral regurgitation (MR) due to myxomatous valve disease affects m
 
 \
 
-# Aortic Valve\
+# <u>Aortic Valve</u>\
 
 ## Calcific Aortic Valve Disease\
 
 \
 
-# Aorta\
+# <u>Aorta</u>\
 
 ## Aortic Aneurysm and Dissection\
 
 Bicuspid Aortic Valve (BAV) syndrome is associated with frequent and premature occurrence of calcific aortic stenosis (AS) and thoracic aortic aneurysms (TAA), with 30-50% of BAV patients requiring surgery in their lifetime for AS, TAA, or both. It is estimated that 1.4% of the population is born with a BAV, making it the most common congenital heart defect in the US.  Eccentric flow dynamics, endothelial dysfunction, and genetic predisposition are key elements impacting the susceptibility of BAV patients to adverse aortic events. Dissection and rupture are mechanical failures of the aortic wall that occurs when the tensile limit of the aortic tissue is overwhelmed. To prevent these events, the ascending aorta is preventively replaced in high-risk patients. The major clinical obstacles hampering the decisions of whether replace the ascending aorta of BAV patients are the absence, in the current guidelines, of any tools informing on the structural integrity of the aortic wall independently of metric measurements and of any non-invasive risk-assessment tools. Here we tested the mechanistic hypothesis that mitigation of glycoxidation reactions revert AGE-mediated paracellular endothelial hyperpermeability and reduce the accumulation of glycol-oxidation products in the ascending aorta of BAV patients. 
 
 
-## Biomedical Engineering
+# <u>Biomedical Engineering</u>
 
-### Glycation-mediated mechanisms of Bioprosthetic Heart Valve Failure\
+## Glycation-mediated mechanisms of Bioprosthetic Heart Valve Failure\
 
 Heart valve disease at this time can only be treated surgically, with either valve replacement or repair.  Bioprosthetic heart valves (BHV), fabricated from glutaraldehyde fixed heterografts, such as bovine pericardium (BP) or porcine aortic valves (PAV), are widely used in both cardiac surgery and in transcatheter valve replacements. Despite outstanding short-term outcomes, BHV dysfunction due to structural valve leaflet degeneration (SVD) develops over time, frequently necessitating device replacement. Calcification is observed in the majority of SVD cases; however, 25% or more SVD cases are not associated with calcification. Recent work from our group demonstrated that BHV are susceptible to non-calcification induced failure mechanisms, involving the formation of unique oxidized amino acids (OxAA) in BHV, such as the crosslink, di-tyrosine (di-Tyr). Feasibility studies also recently documented in BHV explant samples the presence of advanced glycation end products (AGE). The contributions of both AGE and OxAA to SVD pathophysiology has not been previously investigated by our group or others. We are studying the hypotheses that the accumulation of AGE in BHV leaflets together with the receptor for AGE (RAGE) mediated inflammatory response, and OxAA modification of structural proteins contribute to BHV SVD. These mechanisms also are hypothesized to interact with BHV calcification and co-morbidities, such as diabetes and coronary artery disease to enhance SVD.
 
 \
 
-### Structural Degeneration of Implantable Biomaterials in Pediatric Patients\
+## Structural Degeneration of Implantable Biomaterials in Pediatric Patients\
 
 Despite legislation and federal initiatives, such as the Pediatric Device Consortia Grants Program, intended to facilitate pediatric medical device development, innovation for pediatric cardiac patients continues to lag behind the advances made for adult devices, making children requiring reconstructive heart surgery an underserved population. All implantable biomaterials (glutaraldehyde bovine pericardium, xenograft valves and conduits, cryopreserved allografts, autologous pericardium, and collagen bioscaffolds) as well as some artificial polymers are subjected to structural degeneration driven by calcification (via passive calcium deposition and absorption of calcium-binding proteins) and – as discovered by our group – by glyco-oxidation, which via permanent incorporation of glycated protein and cross-links formation, alters the architecture and mechanical proprieties of biomaterials. 
 
@@ -52,7 +53,7 @@ This application has two overarching goals: to understand the mechanisms of acce
 
 \
 
-### Sexual Dimorphism and Durability of Implanted Biomaterials in Patients with Type 2 Diabetes Mellitus\
+## Sexual Dimorphism and Durability of Implanted Biomaterials in Patients with Type 2 Diabetes Mellitus\
 
 Type 2 Diabetes mellitus (T2DM) is a well-known risk factor for heart valve disease, little is known about the mechanisms of accelerated failure of Bioprosthetic Heart Valve in this population. Using a next-generation proteomic approach on an established biobank of retrieved failed Bioprosthetic Heart Valve (BHV) explants and a patented precision medicine susceptibility assay using patient-derived serum we will assess how sexual dimorphism impact the durability of bioprosthetic heart valves in T2DM patients. Mitigation strategies aimed at reducing glycoxidation reactions will be tested to clinically graded valves chemically modified to improve the Bioprosthetic Valve durability of T2DM patients. 
 
@@ -61,7 +62,9 @@ Type 2 Diabetes mellitus (T2DM) is a well-known risk factor for heart valve dise
 [*Russell Berrie Foundation*](https://www.russellberriefoundation.org/diabetes-care-and-research)
 \
 
-### Mechanisms of Cardiac Remodeling in COVID-19 Patients
+# <u>Covid-19 Related Cardiomyopathy</u>
+
+## Mechanisms of Cardiac Remodeling in COVID-19 Patients
 
 As a result of the COVID-19 pandemic, it has been shown that patients with pre-existing heart disease are likely to have more severe COVID-19 symptoms than those without pre-existing heart disease. We seek to test the hypothesis that SARS-CoV-2 induces cardiac injury by decreasing ACE2-mediated cardioprotection, and exacerbating AGE/RAGE-mediated cell signaling mechanisms. The 2 major things we seek to address are if this cell signaling pathway induces cardiac injury, and if circulating RAGE signaling markers be used as biomarkers of cardiovascular injury during acute COVID infection, and after recovery from infection. 
 
