--- a/projects.Rmd
+++ b/projects.Rmd
@@ -72,10 +72,10 @@ As a result of the COVID-19 pandemic, it has been shown that patients with pre-e
 *John Jones Surgical Society Fellowship*\
 [*John Jones Surgical Society*](https://columbiasurgery.org/alumni/john-jones-surgical-society)
 
-## Surgical Innovation
+# <u>Surgical Innovation</u>\
 
-### Patents\
+## Patents\
 
-### Awards and Course\
+## Awards and Course\
 
-### Start Up\
+## Start Up\
