--- a/index.Rmd
+++ b/index.Rmd
@@ -21,22 +21,28 @@ Welcome to the Ferrari Laboratory website, we are located at the Columbia Univer
 
 ## About Our Research
 
-The primary focus of our laboratory research is 
+Coming soon
 
 \
 
 
 ## Lab in the News
 
+Coming soon
+
 \
 
 ## Social Media
 
+Coming soon
+
 \
 
-
-
 ## Photos 
+
+Coming soon
+
+\
 
 
 ##  Navigate
