--- a/projects.Rmd
+++ b/projects.Rmd
@@ -11,7 +11,7 @@ editor_options:
 
 \
 
-# <u>Mitral Valve </u>\
+# Mitral Valve \
 
 ## Myxomatous Mitral Valve Disease
 
@@ -36,7 +36,7 @@ Ischemic mitral regurgitation (IMR) often develops after an ischemic event, whic
 \
 
 
-# <u>Aortic Valve</u>\
+# Aortic Valve\
 
 ## Calcific Aortic Valve Disease\
 
@@ -53,7 +53,7 @@ This program is concerned with modulating oxidative glycation reactions in speci
 
 \
 
-# <u>Aorta</u>\
+# Aorta\
 
 ## Aortic Aneurysm and Dissection\
 
@@ -75,7 +75,7 @@ Bicuspid Aortic Valve (BAV) syndrome is associated with frequent and premature o
 *R01 HL122805*
 
 
-# <u>Biomedical Engineering</u>
+# Biomedical Engineering
 
 ## Glycation-mediated mechanisms of Bioprosthetic Heart Valve Failure\
 
@@ -137,7 +137,7 @@ Type 2 Diabetes mellitus (T2DM) is a well-known risk factor for heart valve dise
 [*Russell Berrie Foundation*](https://www.russellberriefoundation.org/diabetes-care-and-research)
 \
 
-# <u>Covid-19 Related Cardiomyopathy</u>
+# Covid-19 Related Cardiomyopathy
 
 ## Mechanisms of Cardiac Remodeling in COVID-19 Patients
 
@@ -159,7 +159,7 @@ As a result of the COVID-19 pandemic, it has been shown that patients with pre-e
 *John Jones Surgical Society Fellowship*\
 [*John Jones Surgical Society*](https://columbiasurgery.org/alumni/john-jones-surgical-society)
 
-# <u>Surgical Innovation</u>\
+# Surgical Innovation\
 
 ## Patents\
 
