--- a/index.Rmd
+++ b/index.Rmd
@@ -51,7 +51,7 @@ Coming soon
 \
 
 
-### Ferrari Lab Internal Links
+### Ferrari Lab Links
 
 [About Us](about.html)\
 Meet our team
@@ -67,7 +67,7 @@ Integrated program for surgical residents interested in a career in translationa
 
 \
 
-### External Links
+### Columbia University Links
 
 [Ferrari Lab – Columbia Biobank for Translational Science](https://columbiasurgery.org/research/ferrari-lab)\
 
