--- a/about.Rmd
+++ b/about.Rmd
@@ -40,6 +40,7 @@ First-generation graduate (U of Pavia, 2003), I am a group leader and Associate 
 I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk. Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure. 
 
 [Email](mailto:<ec2929@cumc.columbia.edu>)\
+*(recommendations for mystery books welcome)*
 
 [Google Scholar](https://scholar.google.com/citations?hl=en&user=02qHMNkAAAAJ)\
 
