--- a/about.Rmd
+++ b/about.Rmd
@@ -89,6 +89,10 @@ Now having completed 3 years of residency, he is currently studying the mechanis
 
 *Michael Simpson, MD*
 
+Michael is a resident in the Integrated Cardiothoracic Surgery residency program at New York Presbyterian-Columbia. He obtained his MD from Columbia University College of Physicians & Surgeons. He has completed three years of his cardiac surgical training and has an interest in aortic surgery and structural heart disease. He is currently studying pathologic mechanisms in mitral valve disease and is involved in several clinical projects across the spectrum of adult cardiac surgery. 
+
+[Email](mailto:<mts2153@cumc.columbia.edu>)
+
 \
 
 ### Biobank			
