--- a/about.Rmd
+++ b/about.Rmd
@@ -6,24 +6,25 @@ output:
     theme: journal
     toc: true
     toc_float: true
+    number_sections: false
 editor_options: 
   chunk_output_type: console
 ---
 
-# Our Team
-
-## <u>Primary Investigator</u> 
+# Primary Investigator 
 
 \
-
-### Giovanni Ferrari, PhD
 
 
 ![](images/ferrari.jpg){width=25%}
 
-First-generation graduate (U of Pavia, 2003), I am a group leader and Associate Professor (with tenure) at Columbia University, Dept. of Surgery and Biomedical Engineering. I am Scientific Director of the Cardiothoracic Research Program and Director of the Columbia Biobank for Translational Science, an applied biobank supporting translational and precision medicine initiatives. Heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis are my main research interests.
+### Giovanni Ferrari, PhD
 
-</right>
+First-generation graduate at the [U of Pavia](https://web-en.unipv.it) (2003), I am a group leader and Associate Professor (with tenure) in the Columbia University, [Department of Surgery](https://columbiasurgery.org/research) and [School of Biomedical Engineering](https://www.bme.columbia.edu). \
+
+I am the Scientific Director of the [Cardiothoracic Research Program and Director of the Columbia Biobank for Translational Science](https://columbiasurgery.org/research/ferrari-lab), an applied biobank supporting translational and precision medicine initiatives.\
+
+My main research interests are in heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis.
 
 * [Twitter](https://twitter.com/ferrag02)
 * [Email](mailto:<gf2375@cumc.columbia.edu>)
@@ -31,15 +32,19 @@ First-generation graduate (U of Pavia, 2003), I am a group leader and Associate 
 
 \
 	
-### <u> Lab Members </u>
+#  Ferrari Lab Members 
 
-#### Associate Research Scientists
+\
 
-*Esti Castillero, PhD*
+### Associate Research Scientists
 
 ![](images/esti.png){width=25%}
 
-I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk. Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure. 
+#### *Esti Castillero, PhD*
+
+I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk. \
+
+Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure. 
 
 [Email](mailto:<ec2929@cumc.columbia.edu>)\
 *(recommendations for mystery books welcome)*
@@ -48,48 +53,60 @@ I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My rese
 
 \
 
-*Chiara Camillo, PhD*
+#### *Chiara Camillo, PhD*
 
 \
 
-#### Postdoctoral Research Fellows	
+### Postdoctoral Research Fellows	
 
- *Yingfei Xue, PhD*\
- 
 ![](images/xue.JPG){width=25%}
 
-Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni Ferrari lab at Columbia University. He obtained his PhD degree from [University of Pittsburgh School of Pharmacy](http://www.pharmacy.pitt.edu/research/research_index.php). His research interest is centered around cardiovascular implants including bioprosthetic valves, conduits, and patches. His research goal is to understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.
+#### *Yingfei Xue, PhD*\
+
+Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni Ferrari lab at Columbia University. He obtained his PhD degree from [University of Pittsburgh School of Pharmacy](http://www.pharmacy.pitt.edu/research/research_index.php). His research interest is centered around cardiovascular implants including bioprosthetic valves, conduits, and patches. \
+
+His research goal is to better understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.
 
 [Email](mailto:<yx2529@cumc.columbia.edu>)\
 
- 
+\
 
-*Antonio Frasca, PhD*
+#### *Antonio Frasca, PhD*
 
 \
 
-#### Surgical Residents			
-
-*Alexey Abramov, MD*
+### Surgical Residents			
 
 ![](images/abramov.jpg){width=25%}
 
-Dr. Alexey Abramov is a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest in cardiothoracic surgery fellowship and biomedical engineering.  He graduated from [Emory University](http://college.emory.edu/main/index.html) (Atlanta, GA) and received his medical degree from [New York Medical College](https://www.nymc.edu/school-of-medicine-som/) (Valhalla, NY). Currently, Alexey is a post-doctoral research fellow in Dr. Ferrari's lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master's degree in the Department of Biostatistics in the Mailmans School of Public Health in the [Clinical Research Methods](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods) track. In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.
+#### *Alexey Abramov, MD*
+
+Dr. Alexey Abramov is a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest in cardiothoracic surgery fellowship and biomedical engineering.  He graduated from [Emory University](http://college.emory.edu/main/index.html) and received his medical degree from [New York Medical College](https://www.nymc.edu/school-of-medicine-som/).\
+
+Currently, he is a post-doctoral research fellow in Dr. Ferrari's lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master's degree in the [Department of Biostatistics in the Mailmans School of Public Health](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods) track. \
+In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.
 
 [Email](mailto:<aa3832@cumc.columbia.edu>)
- 
-*Dov Levine, MD*
 
-*Clinton Erwin, MD*
+\
+ 
+#### *Dov Levine, MD*
+
+\
 
 ![](images/clint.jpg){width=25%}
 
-Clinton is a resident in  Integrated Cardiothoracic surgery at New York Presbyterian-Columbia. He obtained his MD from University of Alabama, Birmingham, where he developed an interest in cardiac surgery. /
+#### *Clinton Erwin, MD*
+
+Clinton is a resident in  [Integrated Cardiothoracic surgery at New York Presbyterian-Columbia](https://columbiasurgery.org/cardiothoracic-training). He obtained his MD from [University of Alabama at Birmingham](https://www.uabmedicine.org), where he developed an interest in cardiac surgery. \
+
 Now having completed 3 years of residency, he is currently studying the mechanisms of cardiovascular damage related to COVID-19, along with several clinical projects in adult cardiac surgery.   
 
 [Email](mailto:<we2153@cumc.columbia.edu>)
 
-*Michael Simpson, MD*
+\
+
+#### *Michael Simpson, MD*
 
 Michael is a resident in the Integrated Cardiothoracic Surgery residency program at New York Presbyterian-Columbia. He obtained his MD from Columbia University College of Physicians & Surgeons. He has completed three years of his cardiac surgical training and has an interest in aortic surgery and structural heart disease. He is currently studying pathologic mechanisms in mitral valve disease and is involved in several clinical projects across the spectrum of adult cardiac surgery. 
 
@@ -97,13 +114,15 @@ Michael is a resident in the Integrated Cardiothoracic Surgery residency program
 
 \
 
-#### Biobank			
+### Biobank			
 
- *Vivian Moreno*
+
 
 ![](images/viv.jpg){width=25%}
 
-Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She completed her Bachelor’s of Science in Biomedical Science at the University of Kent in Canterbury, England. Her research background includes cancer research at Yale University and novel antimicrobial peptides at NovaBiotics, Ltd. Her favorite pastimes include playing the piano, volunteering, and working out at AARMY.
+#### *Vivian Moreno*
+
+Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She completed her Bachelor’s of Science in Biomedical Science at the [University of Kent in Canterbury, England](https://www.kent.ac.uk). Her research background includes cancer research at Yale University and novel antimicrobial peptides at [NovaBiotics, Ltd](https://novabiotics.co.uk). Her favorite pastimes include playing the piano, volunteering, and working out at AARMY.
 
 [Email](mailto:<vmm2142@cumc.columbia.edu>)
 
@@ -111,27 +130,27 @@ Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She comp
 
 #### Lab Manager
 
- *Mangesh Kurade*
+#### *Mangesh Kurade*
 
 \
 
-#### Medical Students
-
- *Nicolo Vitale (U of Milan)*
+### Medical Students
  
  ![](images/niko.jpg){width=25%}
  
- *Eduardo (U of Bologna)*
+#### *Nicolo Vitale (U of Milan)*
+
+#### *Eduardo (U of Bologna)*
  
- *Evan (Morehouse School of Medicine)*
+#### *Evan (Morehouse School of Medicine)*
 
 \
 
-#### Biomedical Engineering Students		
-
-*Mar Martinez Mas (Columbia University)*\
+### Biomedical Engineering Students		
 
 ![](images/mas.jpg){width=25%}
+
+#### *Mar Martinez Mas (Columbia University)*\
 
 Mar Martinez Mas is a Master’s student in [Biomedical Engineering at Columbia University](https://www.bme.columbia.edu). She is from Barcelona, Spain, and completed her undergraduate degree at [Universitat Pompeu Fabra](https://www.upf.edu/es/) (Barcelona, Spain) where she worked in the field of biomedical electronics. Afterward, she completed the last year and a half of her degree at the [Politecnico di Milano](https://www.polimi.it) (Milan, Italy), where she mainly studied the field of biomechanics. Her main interest lies in prosthetic heart valves and life support systems. She joined the Ferrari Lab in 2021 and is studying the mass and tissue thickening of cardiac valvular bioprostheses under different conditions.
 
@@ -140,17 +159,17 @@ Mar Martinez Mas is a Master’s student in [Biomedical Engineering at Columbia 
 
 \
 
-#### Chief Vision Officer 
-
-*Churro*
+### Chief Vision Officer 
 
 
 ![](images/churro.jpg){width=25%}
 
+#### *Churro*
+
 2 years old Irish-Doodle. Strong interest in any type of food.
 Life's not ruff when I am around. Woof
 
-#### Alumni
+### Alumni
 
 Residents
 
@@ -160,14 +179,15 @@ Postdocs
 \
 
 
-## <u> Collaborators </u>
+#  Collaborators 
 
 ![](images/levy.jpg){width=25%}
 
 ### Robert J. Levy, MD\
+
 *Children's Hospital of Philadelphia*\
 
-Levy is the director of Cardiology Research, and also serves as program director of the Cardiology National Heart, Lung, and Blood Institute (NHLBI) Research Training Grant. 
+Levy is the director of Cardiology Research, and also serves as program director of the Cardiology [National Heart, Lung, and Blood Institute (NHLBI)](http://www.nhlbi.nih.gov) Research Training Grant. 
 
 His research interests are the pathophysiology of biomaterials used in medicine, basic mechanisms and novel therapies for heart valve disease, arterial angioplasty, local drug delivery, and nanomedicine. He also has experience over three decades in medical device development.
 
@@ -189,7 +209,7 @@ Columbia University College of Physicians and Surgeons\
 
 \
 
-<u> Expandable Polymeric-valved Conduit to Repair Congenital Heart Disease </u>
+ Expandable Polymeric-valved Conduit to Repair Congenital Heart Disease 
 
 The proposed research is relevant to public health because a biostable polymeric valved conduit that can be implanted surgically to reconstruct the right ventricular outflow tract in neonates and infants and then expanded by successive transcatheter procedures to reach the adult size, would revolutionize how we treat children with heart valve diseases. Such a new generation of valved conduit would decrease the number of open-heart surgeries and reoperations, decrease the mortality, complications and healthcare costs related to these procedures and increase the life expectancy and quality of life of these patients.
 
