--- a/about.Rmd
+++ b/about.Rmd
@@ -138,11 +138,23 @@ Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She comp
  
  ![](images/niko.jpg){width=25%}
  
-#### *Nicolo Vitale (U of Milan)*
+#### *Nicolò Vitale, MD
+*(U of Milan)*
 
-#### *Eduardo (U of Bologna)*
- 
-#### *Evan (Morehouse School of Medicine)*
+Nicolò Vitale is cardiac surgery resident at [Università degli studi di Milano](https://www.unimi.it/it). He obtained his MD from Università degli studi di Milano. He is very interested in the mechanisms of ischemic heart failure. He is currently studying the mechanisms of structural degeneration of the pediatric bioprosthetic conduits.
+
+\
+
+#### *Edoardo Bianco \
+*(U of Bologna)*
+
+\
+
+![](images/evan_woodard.jpg){width=25%}
+#### *Evan Woodard\
+*Morehouse School of Medicine)*
+
+I am Evan Woodard and I am a current 2nd year medical student at Morehouse School of Medicine interested in a career in cardiothoracic surgery. Some of my research and clinical interest include patient outcomes research and minimally invasive surgical techniques. 
 
 \
 
