--- a/about.Rmd
+++ b/about.Rmd
@@ -114,6 +114,15 @@ Michael is a resident in the Integrated Cardiothoracic Surgery residency program
 
 \
 
+![](images/niko.jpg){width=25%}
+ 
+#### *Nicolò Vitale, MD*\
+
+Nicolò Vitale is cardiac surgery resident at [Università degli studi di Milano](https://www.unimi.it/it). He obtained his MD from Università degli studi di Milano. He is very interested in the mechanisms of ischemic heart failure. He is currently studying the mechanisms of structural degeneration of the pediatric bioprosthetic conduits.
+
+\
+
+
 ### Biobank			
 
 
@@ -136,15 +145,6 @@ Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She comp
 
 ### Medical Students
  
- ![](images/niko.jpg){width=25%}
- 
-#### *Nicolò Vitale, MD
-*(U of Milan)*
-
-Nicolò Vitale is cardiac surgery resident at [Università degli studi di Milano](https://www.unimi.it/it). He obtained his MD from Università degli studi di Milano. He is very interested in the mechanisms of ischemic heart failure. He is currently studying the mechanisms of structural degeneration of the pediatric bioprosthetic conduits.
-
-\
-
 #### *Edoardo Bianco \
 *(U of Bologna)*
 
