--- a/index.Rmd
+++ b/index.Rmd
@@ -33,9 +33,7 @@ Coming soon
 
 ## Social Media
 
-Coming soon
-
-\
+<a class="twitter-timeline" data-width="650" data-height="350" href="https://twitter.com/lab_ferrari?ref_src=twsrc%5Etfw">Tweets by lab_ferrari</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ## Photos 
 
