--- a/about.Rmd
+++ b/about.Rmd
@@ -25,8 +25,12 @@ I am the Scientific Director of the [Cardiothoracic Research Program and Directo
 
 My main research interests are in heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis.
 
-* [Twitter](https://twitter.com/ferrag02)
 * [Email](mailto:<gf2375@cumc.columbia.edu>)
+
+\
+
+<a href="https://twitter.com/ferrag02?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @ferrag02</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 
 \
 	
