updated covid toc

--- a/projects.Rmd
+++ b/projects.Rmd
@@ -155,7 +155,7 @@ Type 2 Diabetes mellitus (T2DM) is a well-known risk factor for heart valve dise
 [*Russell Berrie Foundation*](https://www.russellberriefoundation.org/diabetes-care-and-research)
 \
 
-# Covid-19 Related Cardiomyopathy
+# Covid-19 Cardiac Injury
 
 ## Mechanisms of Cardiac Remodeling in COVID-19 Patients
 
