--- a/index.Rmd
+++ b/index.Rmd
@@ -77,6 +77,8 @@ Integrated program for surgical residents interested in a career in translationa
 
 [Columbia Surgery Residency Program](https://columbiasurgery.org/general-surgery-residency)
 
+[Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)](https://columbiasurgery.org/cardiothoracic-training)
+
 \
 
 
