--- a/index.Rmd
+++ b/index.Rmd
@@ -9,29 +9,34 @@ editor_options:
   chunk_output_type: console
 ---
 
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+
 \
 
-## Our Lab
+## <i class='fas fa-compass'></i> Our Lab
 
-Welcome to the Ferrari Laboratory website, we are located at the Columbia University Irving Medical Center in New York City, New York.
+Welcome to the Ferrari Laboratory website.  We are located at the Columbia University Irving Medical Center in New York City, New York.
 
 \
 
-
-## Our Research
+## <i class='fas fa-flask'></i> Our Research
 
 Coming soon
 
 \
 
 
-## Lab in the News
+## <i class='fas fa-rss-square'></i> Lab in the News
 
 Coming soon
 
 \
 
-## Social Media
+## <i class='fas fa-comments'></i> Social Media
 
 <a class="twitter-timeline" data-width="650" data-height="350" href="https://twitter.com/lab_ferrari?ref_src=twsrc%5Etfw">Tweets by lab_ferrari</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -53,16 +58,16 @@ Coming soon
 
 \
 
-[About Us](about.html)\
+<i class='fas fa-users'></i> [About Us](about.html)\
 Meet our team
 
-[Projects and Publications](projects.html)\
+<i class='fas fa-flask'></i> [Projects and Publications](projects.html)\
 Learn about our ongoing projects and publications
 
-[Biobank Inquiries](biobank.html)\
+<i class='fas fa-vial'></i> [Cardiothoracic Biobank Inquiries](biobank.html)\
 Resources for accessing our biobank
 
-[Research Program for Residents](program.html)\
+<i class='fas fa-cubes'></i> [Research Program for Residents](program.html)\
 Integrated program for surgical residents interested in a career in translational science 
 
 \
@@ -71,14 +76,14 @@ Integrated program for surgical residents interested in a career in translationa
 
 \
 
-[Ferrari Lab – Columbia Biobank for Translational Science](https://columbiasurgery.org/research/ferrari-lab)\
+<i class='fas fa-laptop'></i> [Ferrari Lab – Columbia Biobank for Translational Science](https://columbiasurgery.org/research/ferrari-lab)\
 
-[Columbia Cardiac Surgery](https://columbiasurgery.org/heart)\
+<i class='fas fa-hospital-symbol'></i> [Columbia Cardiac Surgery](https://columbiasurgery.org/heart)\
 
-[Columbia Surgery Residency Program](https://columbiasurgery.org/general-surgery-residency)
+<i class='fas fa-procedures'></i> [Columbia Surgery Residency Program](https://columbiasurgery.org/general-surgery-residency)
 
-[Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)](https://columbiasurgery.org/cardiothoracic-training)
+<i class='fas fa-stethoscope'></i> [Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)](https://columbiasurgery.org/cardiothoracic-training)
 
 \
 
-
+</body>
