--- a/about.Rmd
+++ b/about.Rmd
@@ -102,16 +102,22 @@ His research goal is to better understand the mechanisms of cardiovascular impla
 
 #### *Alexey Abramov, MD*
 
-Dr. Alexey Abramov is a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest in cardiothoracic surgery fellowship and biomedical engineering.  He graduated from [Emory University](http://college.emory.edu/main/index.html) and received his medical degree from [New York Medical College](https://www.nymc.edu/school-of-medicine-som/).\
+Alexey is a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest in cardiothoracic surgery fellowship and biomedical engineering.  He graduated from [Emory University](http://college.emory.edu/main/index.html) and received his medical degree from [New York Medical College](https://www.nymc.edu/school-of-medicine-som/).\
 
-Currently, he is a post-doctoral research fellow in Dr. Ferrari's lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master's degree in the [Department of Biostatistics in the Mailmans School of Public Health](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods) track. \
+Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari's lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master's degree in the [Department of Biostatistics in the Mailmans School of Public Health](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods) track. \
 In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.
 
 <i class="fa fa-telegram"></i> [Email](mailto:<aa3832@cumc.columbia.edu>)
 
 \
  
+![](images/dov.jpg){width=25%}
+
 #### *Dov Levine, MD*
+
+Dov is a General Surgery resident and aspiring Cardiac Surgeon currently doing his T32 Postdoctoral Research Fellowship in the Ferrari Lab. A local New Yorker, he attended medical school at [Albert Einstein College of Medicine](https://einsteinmed.org), and graduated with Alpha Omega Alpha and Distinction in Clinical Research honors. He then continued with his surgical training at [Robert Wood Johnson University Hospital](https://www.rwjms.rutgers.edu/departments/surgery/divisions/other/division-of-general-surgery/residency/about-the-program). His research interests include cellular mechanisms of thoracic aortic aneurysm development, including the role of Advanced Glycated End products (AGEs) on aortic wall instability.
+
+<i class="fa fa-telegram"></i> [Email](mailto:<dl3267@cumc.columbia.edu>)
 
 \
 
