--- a/projects.Rmd
+++ b/projects.Rmd
@@ -3,6 +3,8 @@ title: "Our Projects and Publications"
 subtitle: "*Columbia University Irving Medical Center Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
+    css: style2
+    theme: journal
     toc: true
     toc_float: true
 editor_options: 
