--- a/program.Rmd
+++ b/program.Rmd
@@ -3,9 +3,10 @@ title: "Research Program for Residents"
 subtitle: "*Columbia University Irving Medical Center Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
-    theme: journal
+    css: style2.css
     toc: true
     toc_float: true
+    number_sections: false
 editor_options: 
   chunk_output_type: console
 ---
