updated evans links

--- a/about.Rmd
+++ b/about.Rmd
@@ -188,7 +188,7 @@ Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She comp
 #### *Evan Woodard* \
 *Morehouse School of Medicine*
 
-I am Evan Woodard and I am a current 2nd year medical student at Morehouse School of Medicine interested in a career in cardiothoracic surgery. Some of my research and clinical interest include patient outcomes research and minimally invasive surgical techniques. 
+I am Evan Woodard and I am a current 2nd year medical student at [Morehouse School of Medicine](https://msm.edu)interested in a career in cardiothoracic surgery. Some of my research and clinical interest include patient outcomes research and minimally invasive surgical techniques. 
 
 \
 
